Création workshop, publics et tests css

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,7 @@
 
 <%= yield %>
 
+<%= image_tag "http://static.ladepeche.fr/content/media/image/zoom/2011/04/01/cc8c84a30b5cf0ac4eac722ff1bda228.jpg" %>
+
 </body>
 </html>
